# llm-statemachine-demo

./: pyproject.toml
llm_statemachine_demo/: decision_tree.py  llm_call.py  render_templates.py  streamlit_app.py
llm_statemachine_demo/components/: llm.py
llm_statemachine_demo/models/: message.py  state.py
llm_statemachine_demo/templates/decision_trees/: user_register.yaml
llm_statemachine_demo/templates/prompts/: decision_prompts.jinja
tests/: ender_decision_prompts_test.py
