[tool.poetry]
name = "llm-statemachine-demo"
version = "0.1.0"
description = ""
authors = ["zhonghaoran.37 <zhonghaoran.37@bytedance.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.1.16"
streamlit = "^1.33.0"
openai = "^1.23.6"
langchain-community = "^0.0.34"
langchain-openai = "^0.1.4"
jinja2 = "^3.1.3"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
